tests/reference/asr-structs_02-f95782c.stderr
semantic error: `s` must be initialized with an instance of struct S
 --> tests/errors/structs_02.py:8:5
  |
8 |     s: S
  |     ^^^^ 
